--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "start-react",
   "version": "0.1.0",
-  "homepage": "git@github.com:IMostafaR/start-react.git",
+  "homepage": "https://IMostafaR.github.io/start-react",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
